--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,27 +6,33 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.site-container{
+.site-container {
   min-height: 100vh;
 }
-main{
+main {
   flex: 1;
 }
-.products{
+.btn-primary {
+  background-color: #f0c040;
+  color: #000000;
+}
+.products {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
-
-.product{
+.rating span {
+  color: #ffc000;
+}
+.product {
   border: 1px #404040 solid;
   margin: 1rem;
 }
 
-.product img{
+.product img {
   width: 100%;
   max-width: 400px;
 }
-.product-info{
+.product-info {
   padding: 1rem;
 }
